@@ -24,9 +24,10 @@ Architecture: any
 Depends: ${misc:Depends},
          ${shlibs:Depends},
          iproute2,
-Breaks: nginx-light (<< 1.22.1-6~), nginx-extras (<< 1.22.1-6~), nginx-core (<< 1.22.1-6~), nginx-common (<< 1.22.1-6~)
-Replaces: nginx-light (<< 1.22.1-6~), nginx-extras (<< 1.22.1-6~), nginx-core (<< 1.22.1-6~), nginx-common (<< 1.22.1-6~)
-Suggests: fcgiwrap, nginx-doc, ssl-cert
+         nginx-common (<< ${source:Version}.1~),
+         nginx-common (>= ${source:Version}),
+Breaks: nginx-light (<< 1.22.1-6~), nginx-extras (<< 1.22.1-6~), nginx-core (<< 1.22.1-6~),
+Replaces: nginx-light (<< 1.22.1-6~), nginx-extras (<< 1.22.1-6~), nginx-core (<< 1.22.1-6~),
 Provides: httpd, httpd-cgi, ${nginx:abi}
 Description: small, powerful, scalable web/proxy server
  Nginx ("engine X") is a high-performance web and reverse proxy server
@@ -48,16 +49,15 @@ Description: small, powerful, scalable web/proxy server - documentation
 Package: nginx-common
 Architecture: all
 Multi-Arch: foreign
-Depends: ${misc:Depends},
-         nginx (<< ${source:Version}.1~),
-         nginx (>= ${source:Version}),
+Depends: ${misc:Depends}
+Suggests: fcgiwrap, nginx-doc, ssl-cert
 Description: small, powerful, scalable web/proxy server - common files
  Nginx ("engine X") is a high-performance web and reverse proxy server
  created by Igor Sysoev. It can be used both as a standalone web server
  and as a proxy to reduce the load on back-end HTTP or mail servers.
  .
- From nginx version 1.22.1-6 changed to dependency metapackage,
- can be safely removed.
+ This package contains base configuration files used by all versions of
+ nginx.
 
 Package: nginx-dev
 Architecture: all
