@@ -1,0 +1,12 @@
+etc/nginx
+etc/nginx/conf.d
+etc/nginx/modules-available
+etc/nginx/modules-enabled
+etc/nginx/sites-available
+etc/nginx/sites-enabled
+etc/ufw/applications.d
+usr/share/nginx
+usr/share/vim/addons
+usr/share/vim/registry
+var/lib/nginx
+var/log/nginx
