@@ -1,7 +1,1 @@
 debian/build-bin/objs/nginx usr/sbin
-contrib/vim/* usr/share/vim/addons
-debian/conf/* etc/nginx
-debian/apport/source_nginx.py usr/share/apport/package-hooks
-debian/ufw/nginx etc/ufw/applications.d
-debian/vim/nginx.yaml usr/share/vim/registry
-html/index.html usr/share/nginx/html/
