@@ -1,1 +1,1 @@
-[type: gettext/rfc822deb] nginx.templates
+[type: gettext/rfc822deb] nginx-common.templates
